# leben-simd

./: .gitignore  CMakeLists.txt  README.md  benchmark_suite.sh
src/: config.h  main.c  mandelbrot.c  mandelbrot.h  math_util.c  math_util.h
src/benchmark/: benchmark.c  benchmark.h  clock.c  clock.h  stats.c  stats.h
src/mandelbrot/: mandelbrot.c  mandelbrot.h
